--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="button_logout">Logout</string>
     <string name="button_send_story">Send</string>
     <string name="button_reject_story">Reject</string>
+    <string name="button_my_stories">My Stories</string>
     <string name="button_replace_story">Replace</string>
     <string name="title_activity_new_story">New Story</string>
     <string name="edittext_hint_story">Type your story</string>
@@ -28,9 +29,11 @@
     <string name="server_ur">http://10.0.2.2/TellATale/</string>
     <string name="server_urx">http://84.229.222.166/TellATale</string>
     <string name="server_send_url_suffix">send_story.php</string>
+    <string name="server_send_my_stories_url_suffix">send_my_stories.php</string>
     <string name="server_recv_url_suffix">receive_story.php</string>
     <string name="button_next">-&gt;</string>
     <string name="button_prev">&lt;-</string>
     <string name="edittext_hint_new_segment">Begin your story</string>
+    <string name="title_activity_my_stories">My Stories</string>
 
 </resources>
