--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,17 +2,15 @@
 <resources>
 
     <string name="app_name">TellATale</string>
-    <string name="action_settings">Settings</string>
-    <string name="pref_file_name">com.moti.tellatale.SharedPreference</string>
-    <string name="pref_key_user_name">UserName</string>
-    <string name="pref_key_user_password">Password</string>
-    <string name="pref_key_user_permission">Permission</string>
-    <string name="pref_key_saved_segment">new segment</string>
-    <string name="pref_key_saved_new_story_segment">new story segment</string>
-    <string name="pref_key_temp_story_file_exists">TempStoryFileExists</string>
-    <string name="pref_key_is_duplicate_segment">duplicate segment</string>
-    <string name="pref_key_segment_index">segment index</string>
+    
     <string name="title_activity_login">Login</string>
+    <string name="title_activity_edit_story">Edit Story</string>
+    <string name="title_activity_new_story">New Story</string>
+    <string name="title_activity_my_stories">My Stories</string>
+    
+    <string name="action_settings">Settings</string>
+    
+    <string name="button_get_story">Get a Story</string>
     <string name="button_login_text">Login</string>
     <string name="button_new_story">New Story</string>
     <string name="button_logout">Logout</string>
@@ -20,20 +18,28 @@
     <string name="button_reject_story">Reject</string>
     <string name="button_my_stories">My Stories</string>
     <string name="button_replace_story">Replace</string>
-    <string name="title_activity_new_story">New Story</string>
+    <string name="button_next">-&gt;</string>
+    <string name="button_prev">&lt;-</string>
+    
     <string name="edittext_hint_story">Type your story</string>
-    <string name="button_get_story">Get a Story</string>
-    <string name="title_activity_edit_story">Edit Story</string>
+    <string name="edittext_hint_new_segment">Begin your story</string>
+    
     <string name="temp_story_file_name">tmpStory.xml</string>
+    <string name="pref_file_name">com.moti.tellatale.SharedPreference</string>
+    <string name="pref_key_user_name">UserName</string>
+    <string name="pref_key_user_password">Password</string>
+    <string name="pref_key_user_permission">Permission</string>
+    <string name="pref_key_saved_segment">new segment</string>
+    <string name="pref_key_saved_new_story_segment">new story segment</string>
+    <string name="pref_key_temp_story">TempStory</string>
+    <string name="pref_key_is_duplicate_segment">duplicate segment</string>
+    <string name="pref_key_segment_index">segment index</string>
+    
     <string name="server_url">http://www.motik.dx.am/</string>
     <string name="server_ur">http://10.0.2.2/TellATale/</string>
     <string name="server_urx">http://84.229.222.166/TellATale</string>
     <string name="server_send_url_suffix">send_story.php</string>
     <string name="server_send_my_stories_url_suffix">send_my_stories.php</string>
     <string name="server_recv_url_suffix">receive_story.php</string>
-    <string name="button_next">-&gt;</string>
-    <string name="button_prev">&lt;-</string>
-    <string name="edittext_hint_new_segment">Begin your story</string>
-    <string name="title_activity_my_stories">My Stories</string>
 
 </resources>
